[package]
name = "quad-file-download"
version = "0.1.5"
edition = "2021"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sapp-jsutils = "0.1.4"

[dev-dependencies]
macroquad = "0.4.13"

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = { version = "0.15.2", default-features = false, features = ["gtk3"] }
